--- a/html/1-tag.html
+++ b/html/1-tag.html
@@ -73,9 +73,8 @@
       alt="vscode logo"
       width="50%"
     />
-    <img src="/assets/img_grwm.jpg" alt="vscode logo" />
-    <img src="/assets/img_grwm.jpg" alt="vscode logo" / width="50%"
-    height="50%">
+    <img src="/assets/img_grwm.jpg" alt="grwm" />
+    <img src="/assets/img_grwm.jpg" alt="grwm" / width="50%" height="50%">
 
     <!-- tag table -->
     <table border="1">
@@ -99,7 +98,7 @@
         </tr>
       </tbody>
     </table>
-    <br>
+    <br />
     <table border="3">
       <thead>
         <tr>
